--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> <!-- comentário -->
+    <title>Document :D</title><!-- Comentario -->
     <style>
         body{
-            background-color: rgb(13, 110, 137);
-            color: rgb(84, 205, 28);
+            background-color: black;
+            color: red;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Minha <span style="color: turquoise;">primeira
-    </span> 
-    página html</h1>
+    <nav>
+        <ul type="square">
+            <li class="menu">Menu 1</li>
+            <li class="menu">Menu 2</li>
+            <li class="menu">Menu 3</li>
+        </ul>
+    </nav>
+    <h1>Meu <span style="color: white;"> 
+        primeiro </span> site</h1>
+    <h2>Conteúdo do assunto</h2>
+    <p>Aula de css externo</p>
+    
+    <ol type="I" start="1">
+        <li> Ordenado 1</li>
+        <li> Ordenada 2</li>
+        <li> Ordenado 3</li>
+    </ol>
+    
 </body>
 </html>
