--- a/Menu3.html
+++ b/Menu3.html
@@ -22,10 +22,12 @@
                 </a>
             </ul>
         </nav>
-        <h1>Página 2</h1>
+        <h1>Página 3</h1>
     </header>
     <main>
-        
+      <h2 id="DataHora">Bom dia Jonas</h2>  
+      <button type="button" class="btn btn-light" onclick="atual()">Click aqui</button>
+       <script src="script.js"></script> 
         
     </main>
 <footer>
