--- a/Ricardo 2 A/Menu2.html
+++ b/Ricardo 2 A/Menu2.html
@@ -40,9 +40,9 @@
           </div>   
         
     </main>
-<footer>
-    Isto é um rodapé.
-</footer>
+    <footer class="bg-primary-subtle text-black text center py-3">
+        &#169 Página feita por Ricardo na aula de desenvolvimento WEB.
+     </footer>
     
 </body>
 </html>
