--- a/Ricardo 2 A/index.html
+++ b/Ricardo 2 A/index.html
@@ -35,8 +35,8 @@
             <li> Ordenado 3</li>
         </ol>
     </main>
-<footer>
-    Isto é um rodapé.
+<footer class="bg-primary-subtle text-black text center py-3">
+   &#169 Página feita por Ricardo na aula de desenvolvimento WEB.
 </footer>
     
 </body>
